developer/src/kmc-package/test/fixtures/invalid/nokeyboardversion.kmn
store(&NAME) "nokeyboardversion"
store(&VERSION) "10.0"
c no &keyboardversion store!